--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
@@ -10,23 +13,21 @@
   </head>
   <body>
     <div id="app">
-      <img src="/logo.svg" alt="Logo">
+      <img src="/logo.svg" alt="Logo" />
       <h1>Shorts Summary</h1>
 
       <form id="form">
-        <input type="url" id="url" placeholder="URL do vídeo">
+        <input type="url" id="url" placeholder="URL do vídeo" />
         <button title="Resumir">
           <i class="ph ph-play"></i>
-        </button>        
+        </button>
       </form>
-      
-      <h2>
-        Resumo
-      </h2>
+
+      <h2>Resumo</h2>
       <p id="content" class="placeholder">Escolha um short para resumir</p>
     </div>
 
-    <script type="module" src="web/main.js"></script>
+    <script type="module" src="./web/main.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </body>
 </html>
