--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -26,8 +28,7 @@
       <h2>Resumo</h2>
       <p id="content" class="placeholder">Escolha um short para resumir</p>
     </div>
-
-    <script type="module" src="./web/main.js"></script>
+    <script type="module" src="web/main.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </body>
 </html>
